pynote 0.3 (XXXX-XX-XX)
-----------------------

Fixed

* Missing import statement. Now you are informed about a misspelled
  pygments theme instead of a traceback.
* Refactored config.py again, see #409.
* Do not use colors by default, see #350.


pynote 0.2.2 (2014-02-05)
-------------------------

Fixed some problems which especially occured since the last release.

* Fixed a wrong method call, see #370. Thanks to Klaus Seistrup.
* Fixed a problems with pynote.init and pynote.config, see 368 and
  forum posts. Thanks to tonk and null.
* Improved pynote.container. If no data files exist exit and print
  an error message.
* Got rid of git flow, see #369. The errors occured because I forgot
  to bump the version number. Git flow restricted me fixing this trivial
  error with a little rebase.


pynote 0.2.1 (2014-01-31)
-------------------------

Quick and dirty bugfix release

* Do not show an empty table, fixes #366.
* Quick patches for pynote.config, because note init was broken, see #365.
  - Thanks to Udo Wendler!
  - pynote.config will be refactored in the next release!
* Removed an obsolete link from README.rst, see #362.


pynote 0.2 (2014-01-31)
-----------------------

New features

* localisation via pybabel (GNU gettext files), see #284.
  - Added German translation.

* pygments support, see #301.
  - note show --lang
    -> Read notes with synthax highlighting.
    -> Find a list of supported lexers on the pygments project page!
  - note compare --no-color
    -> Unified diffs are colored by default.
    -> Suppress colors with --no-color.
  - Choose your pygments theme in noterc with 'pygments_theme', see #307.

* tag support
  - 'note show' shows tags in header
  - note list --tags
    -> Filter all notes depending on the given tag(s).
  - note tags
    -> add tags to a note: note tags 1 --add "foo"
    -> delete tags from a note: note tags 1 --delete "foo"
    -> show tags: note tags 1
    -> show all used tags in active notes: note tags
