@@ -7,6 +7,8 @@ Fixed
   pygments theme instead of a traceback.
 * Refactored config.py again, see #409.
 * Do not use colors by default, see #350.
+* Some problems with long lines in the former get_header implementation,
+  see #372. Now prettytable is used to generate the header as well.
 
 
 pynote 0.2.2 (2014-02-05)
